NIC-942: update swagger docs
